# robotactuatormdo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: _trade_common.py  cobot_elbow_trade.py  humanoid_knee_trade.py  low_voltage_current_limit.py  pareto_sweep.py  qdd_vs_direct_drive.py  quadruped_hip_trade.py  radial_pmsm_screening.py  thermal_transient.py
notebooks/: _case_study_lib.py  bldc_vs_axial_case_study.ipynb  bldc_vs_axial_case_study.py
src/robotactuatormdo/: __init__.py  _numeric.py  evaluation.py  results.py
src/robotactuatormdo/actuators/: __init__.py  actuator.py  gearbox.py  qdd.py  reflected_inertia.py
src/robotactuatormdo/controls/: __init__.py  field_weakening.py  sinusoidal_foc.py  trapezoidal_bldc.py
src/robotactuatormdo/electronics/: __init__.py  battery.py  cable.py  inverter.py  power_stage.py
src/robotactuatormdo/geometry/: __init__.py  axial_flux.py  process.py  radial_flux.py  shear_stress.py
src/robotactuatormdo/losses/: __init__.py  copper.py  core.py  inverter.py  magnet_eddy.py  mechanical.py
src/robotactuatormdo/materials/: __init__.py  copper.py  cost.py  electrical_steel.py  insulation.py  magnets.py  smc.py  structural.py
src/robotactuatormdo/motors/: __init__.py  axial_adapter_axfluxmdo.py  commercial_catalog.py  protocols.py  radial_bldc.py  radial_pmsm.py
src/robotactuatormdo/requirements/: __init__.py  duty_cycle.py  joint.py  robot_task.py
tests/: test_actuator.py  test_axial_from_axfluxmdo.py  test_backends.py  test_duty_cycle.py  test_evaluation.py  test_gearbox.py  test_imports.py  test_inverter.py  test_lumped_network.py  test_materials.py  test_pareto.py  test_phase6.py  test_power_stage.py  test_protocol.py  test_radial_pmsm.py  test_radial_sizing.py  test_shear_stress.py  test_studies.py  test_thermal_transient.py
(+9 files in other folders)
