[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotactuatormdo"
version = "0.1.0"
description = "Topology-neutral robot actuator architecture trade-study and MDO framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "John Hodge", email = "jhodge007@gmail.com" }]
keywords = [
    "robotics",
    "actuator",
    "motor",
    "axial-flux",
    "radial-flux",
    "bldc",
    "pmsm",
    "mdo",
    "optimization",
    "trade-study",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
# Axial-flux motor backend. Kept optional so the radial/system layers install and
# test without axfluxmdo's heavy stack (gmsh, openmdao, pymoo).
axial = ["axfluxmdo>=0.7"]
# Optimization extras shared with axfluxmdo's stack.
opt = ["pymoo>=0.6", "openmdao>=3.30"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]
all = ["robotactuatormdo[axial,opt,dev]"]

[project.urls]
Homepage = "https://github.com/jman4162/robotactuatormdo"
Repository = "https://github.com/jman4162/robotactuatormdo"

[tool.hatch.build.targets.wheel]
packages = ["src/robotactuatormdo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["robotactuatormdo"]
warn_unused_ignores = true
warn_redundant_casts = true
